[B] Fix resource overflow dark-mode appearance
BUGFIX #140529081

Note that in order to prevent a flash of the light/dark appearance
during the background color change, these elements need to have
exactly the same `transition` CSS property as the reader background.

--- a/client/src/theme/Components/reader/resource-viewer.scss
+++ b/client/src/theme/Components/reader/resource-viewer.scss
@@ -66,6 +66,11 @@
     height: 100%;
     content: '';
     box-shadow: inset 0 -14px 10px -2px $neutralWhite;
+    transition: box-shadow $duration $timing;
+
+    .scheme-dark & {
+      box-shadow: inset 0 -14px 10px -2px $neutral90;
+    }
   }
 }
 
